# weather-app

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: tests.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  middleware.py
backend/app/weather/: exceptions.py  models.py  routes.py  service.py
backend/tests/weather/: test_service.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/action/: weather.ts
frontend/src/components/weather/: weather-card.tsx
frontend/src/hooks/: useweather.ts
frontend/src/pages/: Home.tsx
frontend/src/router/: index.tsx
frontend/src/types/: weather.ts
frontend/src/utils/: axios.ts
frontend/tests/: weather.test.tsx
